// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing getPracticeResults function Should return f3 practice results with requsted number id 1`] = `
[
  {
    "code": "GOE",
    "gap": "-",
    "int": "-",
    "kph": "191.993",
    "lap_set_on": 2024-05-17T10:33:59.000Z,
    "laps": "6",
    "name": "O. Goethe",
    "number": 10,
    "position": "1",
    "team": "Campos Racing",
    "time": "1:32.047",
  },
  {
    "code": "BRO",
    "gap": "0.344",
    "int": "0.344",
    "kph": "191.278",
    "lap_set_on": 2024-05-17T10:31:04.000Z,
    "laps": "7",
    "name": "L. Browning",
    "number": 14,
    "position": "2",
    "team": "Hitech Pulse-Eight",
    "time": "1:32.391",
  },
  {
    "code": "BOY",
    "gap": "0.581",
    "int": "0.237",
    "kph": "190.788",
    "lap_set_on": 2024-05-17T10:33:49.000Z,
    "laps": "8",
    "name": "M. Boya",
    "number": 12,
    "position": "3",
    "team": "Campos Racing",
    "time": "1:32.628",
  },
  {
    "code": "FOR",
    "gap": "0.658",
    "int": "0.077",
    "kph": "190.630",
    "lap_set_on": 2024-05-17T10:33:18.000Z,
    "laps": "9",
    "name": "L. Fornaroli",
    "number": 4,
    "position": "4",
    "team": "Trident",
    "time": "1:32.705",
  },
  {
    "code": "RAM",
    "gap": "0.680",
    "int": "0.022",
    "kph": "190.585",
    "lap_set_on": 2024-05-17T10:33:47.000Z,
    "laps": "9",
    "name": "S. Ramos",
    "number": 6,
    "position": "5",
    "team": "Trident",
    "time": "1:32.727",
  },
  {
    "code": "WUR",
    "gap": "0.763",
    "int": "0.083",
    "kph": "190.414",
    "lap_set_on": 2024-05-17T10:34:27.000Z,
    "laps": "10",
    "name": "C. Wurz",
    "number": 17,
    "position": "6",
    "team": "Jenzer Motorsport",
    "time": "1:32.810",
  },
  {
    "code": "MIN",
    "gap": "0.783",
    "int": "0.020",
    "kph": "190.373",
    "lap_set_on": 2024-05-17T10:33:22.000Z,
    "laps": "8",
    "name": "G. Minì",
    "number": 2,
    "position": "7",
    "team": "PREMA Racing",
    "time": "1:32.830",
  },
  {
    "code": "ZAG",
    "gap": "0.823",
    "int": "0.040",
    "kph": "190.291",
    "lap_set_on": 2024-05-17T10:34:20.000Z,
    "laps": "10",
    "name": "M. Zagazeta",
    "number": 19,
    "position": "8",
    "team": "Jenzer Motorsport",
    "time": "1:32.870",
  },
  {
    "code": "LEO",
    "gap": "0.837",
    "int": "0.014",
    "kph": "190.263",
    "lap_set_on": 2024-05-17T10:31:06.000Z,
    "laps": "11",
    "name": "N. León",
    "number": 20,
    "position": "9",
    "team": "Van Amersfoort Racing",
    "time": "1:32.884",
  },
  {
    "code": "LIN",
    "gap": "0.854",
    "int": "0.017",
    "kph": "190.228",
    "lap_set_on": 2024-05-17T10:34:08.000Z,
    "laps": "8",
    "name": "A. Lindblad",
    "number": 3,
    "position": "10",
    "team": "PREMA Racing",
    "time": "1:32.901",
  },
  {
    "code": "MAN",
    "gap": "0.873",
    "int": "0.019",
    "kph": "190.189",
    "lap_set_on": 2024-05-17T10:30:37.000Z,
    "laps": "11",
    "name": "C. Mansell",
    "number": 23,
    "position": "11",
    "team": "ART Grand Prix",
    "time": "1:32.920",
  },
  {
    "code": "EST",
    "gap": "0.884",
    "int": "0.011",
    "kph": "190.166",
    "lap_set_on": 2024-05-17T10:29:55.000Z,
    "laps": "11",
    "name": "M. Esterson",
    "number": 18,
    "position": "12",
    "team": "Jenzer Motorsport",
    "time": "1:32.931",
  },
  {
    "code": "TSO",
    "gap": "0.944",
    "int": "0.060",
    "kph": "190.044",
    "lap_set_on": 2024-05-17T10:27:07.000Z,
    "laps": "11",
    "name": "N. Tsolov",
    "number": 25,
    "position": "13",
    "team": "ART Grand Prix",
    "time": "1:32.991",
  },
  {
    "code": "STE",
    "gap": "0.963",
    "int": "0.019",
    "kph": "190.005",
    "lap_set_on": 2024-05-17T10:33:56.000Z,
    "laps": "11",
    "name": "M. Stenshorne",
    "number": 15,
    "position": "14",
    "team": "Hitech Pulse-Eight",
    "time": "1:33.010",
  },
  {
    "code": "VOI",
    "gap": "1.043",
    "int": "0.080",
    "kph": "189.842",
    "lap_set_on": 2024-05-17T10:31:02.000Z,
    "laps": "10",
    "name": "C. Voisin",
    "number": 29,
    "position": "15",
    "team": "Rodin Motorsport",
    "time": "1:33.090",
  },
  {
    "code": "BEG",
    "gap": "1.131",
    "int": "0.088",
    "kph": "189.662",
    "lap_set_on": 2024-05-17T10:33:42.000Z,
    "laps": "8",
    "name": "D. Beganovic",
    "number": 1,
    "position": "16",
    "team": "PREMA Racing",
    "time": "1:33.178",
  },
  {
    "code": "DUN",
    "gap": "1.141",
    "int": "0.010",
    "kph": "189.642",
    "lap_set_on": 2024-05-17T10:25:56.000Z,
    "laps": "10",
    "name": "A. Dunne",
    "number": 9,
    "position": "17",
    "team": "MP Motorsport",
    "time": "1:33.188",
  },
  {
    "code": "SMI",
    "gap": "1.200",
    "int": "0.059",
    "kph": "189.522",
    "lap_set_on": 2024-05-17T10:33:37.000Z,
    "laps": "10",
    "name": "T. Smith",
    "number": 22,
    "position": "18",
    "team": "Van Amersfoort Racing",
    "time": "1:33.247",
  },
  {
    "code": "VAN",
    "gap": "1.230",
    "int": "0.030",
    "kph": "189.461",
    "lap_set_on": 2024-05-17T10:34:33.000Z,
    "laps": "11",
    "name": "L. Van Hoepen",
    "number": 24,
    "position": "19",
    "team": "ART Grand Prix",
    "time": "1:33.277",
  },
  {
    "code": "FLO",
    "gap": "1.271",
    "int": "0.041",
    "kph": "189.378",
    "lap_set_on": 2024-05-17T10:30:17.000Z,
    "laps": "12",
    "name": "S. Floersch",
    "number": 21,
    "position": "20",
    "team": "Van Amersfoort Racing",
    "time": "1:33.318",
  },
  {
    "code": "MEG",
    "gap": "1.316",
    "int": "0.045",
    "kph": "189.286",
    "lap_set_on": 2024-05-17T10:29:42.000Z,
    "laps": "9",
    "name": "S. Meguetounif",
    "number": 5,
    "position": "21",
    "team": "Trident",
    "time": "1:33.363",
  },
  {
    "code": "WIS",
    "gap": "1.558",
    "int": "0.242",
    "kph": "188.797",
    "lap_set_on": 2024-05-17T10:31:14.000Z,
    "laps": "8",
    "name": "P. Wisnicki",
    "number": 30,
    "position": "22",
    "team": "Rodin Motorsport",
    "time": "1:33.605",
  },
  {
    "code": "SZT",
    "gap": "1.598",
    "int": "0.040",
    "kph": "188.716",
    "lap_set_on": 2024-05-17T10:26:17.000Z,
    "laps": "12",
    "name": "K. Sztuka",
    "number": 8,
    "position": "23",
    "team": "MP Motorsport",
    "time": "1:33.645",
  },
  {
    "code": "TRA",
    "gap": "1.794",
    "int": "0.196",
    "kph": "188.322",
    "lap_set_on": 2024-05-17T10:15:08.000Z,
    "laps": "11",
    "name": "T. Tramnitz",
    "number": 7,
    "position": "24",
    "team": "MP Motorsport",
    "time": "1:33.841",
  },
  {
    "code": "LOA",
    "gap": "1.850",
    "int": "0.056",
    "kph": "188.210",
    "lap_set_on": 2024-05-17T10:31:10.000Z,
    "laps": "12",
    "name": "J. Loake",
    "number": 31,
    "position": "25",
    "team": "Rodin Motorsport",
    "time": "1:33.897",
  },
  {
    "code": "SHI",
    "gap": "2.110",
    "int": "0.260",
    "kph": "187.690",
    "lap_set_on": 2024-05-17T10:26:27.000Z,
    "laps": "11",
    "name": "C. Shields",
    "number": 16,
    "position": "26",
    "team": "Hitech Pulse-Eight",
    "time": "1:34.157",
  },
  {
    "code": "DUF",
    "gap": "2.238",
    "int": "0.128",
    "kph": "187.435",
    "lap_set_on": 2024-05-17T10:34:06.000Z,
    "laps": "10",
    "name": "J. Dufek",
    "number": 28,
    "position": "27",
    "team": "AIX Racing",
    "time": "1:34.285",
  },
  {
    "code": "INT",
    "gap": "2.513",
    "int": "0.275",
    "kph": "186.890",
    "lap_set_on": 2024-05-17T10:15:32.000Z,
    "laps": "10",
    "name": "T. Inthraphuvasak",
    "number": 26,
    "position": "28",
    "team": "AIX Racing",
    "time": "1:34.560",
  },
  {
    "code": "MON",
    "gap": "28.225",
    "int": "25.712",
    "kph": "146.936",
    "lap_set_on": 2024-05-17T10:14:47.000Z,
    "laps": "2",
    "name": "S. Montoya",
    "number": 11,
    "position": "29",
    "team": "Campos Racing",
    "time": "2:00.272",
  },
  {
    "code": "BED",
    "gap": "35.761",
    "int": "7.536",
    "kph": "138.273",
    "lap_set_on": 2024-05-17T10:28:47.000Z,
    "laps": "10",
    "name": "N. Bedrin",
    "number": 27,
    "position": "30",
    "team": "AIX Racing",
    "time": "2:07.808",
  },
]
`;

exports[`Testing getPracticeResults function Should return f3 practice results with requsted string name of race 1`] = `
[
  {
    "code": "BRO",
    "gap": "-",
    "int": "-",
    "kph": "180.687",
    "lap_set_on": 2024-02-29T11:40:19.000Z,
    "laps": "7",
    "name": "L. Browning",
    "number": 14,
    "position": "1",
    "team": "Hitech Pulse-Eight",
    "time": "1:47.828",
  },
  {
    "code": "FOR",
    "gap": "0.055",
    "int": "-",
    "kph": "180.595",
    "lap_set_on": 2024-02-29T11:41:11.000Z,
    "laps": "8",
    "name": "L. Fornaroli",
    "number": 4,
    "position": "2",
    "team": "Trident",
    "time": "1:47.883",
  },
  {
    "code": "BEG",
    "gap": "0.748",
    "int": "0.693",
    "kph": "179.442",
    "lap_set_on": 2024-02-29T11:39:27.000Z,
    "laps": "8",
    "name": "D. Beganovic",
    "number": 1,
    "position": "3",
    "team": "PREMA Racing",
    "time": "1:48.576",
  },
  {
    "code": "TSO",
    "gap": "0.914",
    "int": "0.166",
    "kph": "179.169",
    "lap_set_on": 2024-02-29T11:39:18.000Z,
    "laps": "8",
    "name": "N. Tsolov",
    "number": 25,
    "position": "4",
    "team": "ART Grand Prix",
    "time": "1:48.742",
  },
  {
    "code": "WUR",
    "gap": "0.922",
    "int": "0.008",
    "kph": "179.155",
    "lap_set_on": 2024-02-29T11:38:55.000Z,
    "laps": "9",
    "name": "C. Wurz",
    "number": 17,
    "position": "5",
    "team": "Jenzer Motorsport",
    "time": "1:48.750",
  },
  {
    "code": "VAN",
    "gap": "0.935",
    "int": "0.013",
    "kph": "179.134",
    "lap_set_on": 2024-02-29T11:39:20.000Z,
    "laps": "8",
    "name": "L. Van Hoepen",
    "number": 24,
    "position": "6",
    "team": "ART Grand Prix",
    "time": "1:48.763",
  },
  {
    "code": "MEG",
    "gap": "0.939",
    "int": "0.004",
    "kph": "179.127",
    "lap_set_on": 2024-02-29T11:40:25.000Z,
    "laps": "8",
    "name": "S. Meguetounif",
    "number": 5,
    "position": "7",
    "team": "Trident",
    "time": "1:48.767",
  },
  {
    "code": "LEO",
    "gap": "0.964",
    "int": "0.025",
    "kph": "179.086",
    "lap_set_on": 2024-02-29T11:38:42.000Z,
    "laps": "8",
    "name": "N. León",
    "number": 20,
    "position": "8",
    "team": "Van Amersfoort Racing",
    "time": "1:48.792",
  },
  {
    "code": "MAN",
    "gap": "1.025",
    "int": "0.061",
    "kph": "178.986",
    "lap_set_on": 2024-02-29T11:39:15.000Z,
    "laps": "8",
    "name": "C. Mansell",
    "number": 23,
    "position": "9",
    "team": "ART Grand Prix",
    "time": "1:48.853",
  },
  {
    "code": "LIN",
    "gap": "1.325",
    "int": "0.300",
    "kph": "178.494",
    "lap_set_on": 2024-02-29T11:39:31.000Z,
    "laps": "7",
    "name": "A. Lindblad",
    "number": 3,
    "position": "10",
    "team": "PREMA Racing",
    "time": "1:49.153",
  },
  {
    "code": "TRA",
    "gap": "1.354",
    "int": "0.029",
    "kph": "178.446",
    "lap_set_on": 2024-02-29T11:38:17.000Z,
    "laps": "8",
    "name": "T. Tramnitz",
    "number": 7,
    "position": "11",
    "team": "MP Motorsport",
    "time": "1:49.182",
  },
  {
    "code": "ZAG",
    "gap": "1.356",
    "int": "0.002",
    "kph": "178.443",
    "lap_set_on": 2024-02-29T11:39:02.000Z,
    "laps": "9",
    "name": "M. Zagazeta",
    "number": 19,
    "position": "12",
    "team": "Jenzer Motorsport",
    "time": "1:49.184",
  },
  {
    "code": "VOI",
    "gap": "1.507",
    "int": "0.151",
    "kph": "178.197",
    "lap_set_on": 2024-02-29T11:39:39.000Z,
    "laps": "8",
    "name": "C. Voisin",
    "number": 29,
    "position": "13",
    "team": "Rodin Motorsport",
    "time": "1:49.335",
  },
  {
    "code": "EST",
    "gap": "1.549",
    "int": "0.042",
    "kph": "178.128",
    "lap_set_on": 2024-02-29T11:38:59.000Z,
    "laps": "9",
    "name": "M. Esterson",
    "number": 18,
    "position": "14",
    "team": "Jenzer Motorsport",
    "time": "1:49.377",
  },
  {
    "code": "BOY",
    "gap": "1.639",
    "int": "0.090",
    "kph": "177.982",
    "lap_set_on": 2024-02-29T11:38:28.000Z,
    "laps": "7",
    "name": "M. Boya",
    "number": 12,
    "position": "15",
    "team": "Campos Racing",
    "time": "1:49.467",
  },
  {
    "code": "DUN",
    "gap": "1.684",
    "int": "0.045",
    "kph": "177.909",
    "lap_set_on": 2024-02-29T11:40:13.000Z,
    "laps": "8",
    "name": "A. Dunne",
    "number": 9,
    "position": "16",
    "team": "MP Motorsport",
    "time": "1:49.512",
  },
  {
    "code": "STE",
    "gap": "1.771",
    "int": "0.087",
    "kph": "177.768",
    "lap_set_on": 2024-02-29T11:38:14.000Z,
    "laps": "9",
    "name": "M. Stenshorne",
    "number": 15,
    "position": "17",
    "team": "Hitech Pulse-Eight",
    "time": "1:49.599",
  },
  {
    "code": "SMI",
    "gap": "1.825",
    "int": "0.054",
    "kph": "177.680",
    "lap_set_on": 2024-02-29T11:38:45.000Z,
    "laps": "8",
    "name": "T. Smith",
    "number": 22,
    "position": "18",
    "team": "Van Amersfoort Racing",
    "time": "1:49.653",
  },
  {
    "code": "LOA",
    "gap": "1.826",
    "int": "0.001",
    "kph": "177.678",
    "lap_set_on": 2024-02-29T11:39:43.000Z,
    "laps": "9",
    "name": "J. Loake",
    "number": 31,
    "position": "19",
    "team": "Rodin Motorsport",
    "time": "1:49.654",
  },
  {
    "code": "DUF",
    "gap": "1.949",
    "int": "0.123",
    "kph": "177.479",
    "lap_set_on": 2024-02-29T11:38:50.000Z,
    "laps": "7",
    "name": "J. Dufek",
    "number": 28,
    "position": "20",
    "team": "AIX Racing",
    "time": "1:49.777",
  },
  {
    "code": "SZT",
    "gap": "2.069",
    "int": "0.120",
    "kph": "177.286",
    "lap_set_on": 2024-02-29T11:38:21.000Z,
    "laps": "8",
    "name": "K. Sztuka",
    "number": 8,
    "position": "21",
    "team": "MP Motorsport",
    "time": "1:49.897",
  },
  {
    "code": "WIS",
    "gap": "2.222",
    "int": "0.153",
    "kph": "177.039",
    "lap_set_on": 2024-02-29T11:39:09.000Z,
    "laps": "9",
    "name": "P. Wisnicki",
    "number": 30,
    "position": "22",
    "team": "Rodin Motorsport",
    "time": "1:50.050",
  },
  {
    "code": "INT",
    "gap": "2.266",
    "int": "0.044",
    "kph": "176.968",
    "lap_set_on": 2024-02-29T11:38:48.000Z,
    "laps": "7",
    "name": "T. Inthraphuvasak",
    "number": 26,
    "position": "23",
    "team": "AIX Racing",
    "time": "1:50.094",
  },
  {
    "code": "MON",
    "gap": "2.276",
    "int": "0.010",
    "kph": "176.952",
    "lap_set_on": 2024-02-29T11:26:34.000Z,
    "laps": "7",
    "name": "S. Montoya",
    "number": 11,
    "position": "24",
    "team": "Campos Racing",
    "time": "1:50.104",
  },
  {
    "code": "BED",
    "gap": "2.390",
    "int": "0.114",
    "kph": "176.769",
    "lap_set_on": 2024-02-29T11:40:43.000Z,
    "laps": "8",
    "name": "N. Bedrin",
    "number": 27,
    "position": "25",
    "team": "AIX Racing",
    "time": "1:50.218",
  },
  {
    "code": "SHI",
    "gap": "2.396",
    "int": "0.006",
    "kph": "176.760",
    "lap_set_on": 2024-02-29T11:41:03.000Z,
    "laps": "9",
    "name": "C. Shields",
    "number": 16,
    "position": "26",
    "team": "Hitech Pulse-Eight",
    "time": "1:50.224",
  },
  {
    "code": "RAM",
    "gap": "28.520",
    "int": "26.124",
    "kph": "142.893",
    "lap_set_on": 2024-02-29T11:25:37.000Z,
    "laps": "8",
    "name": "S. Ramos",
    "number": 6,
    "position": "27",
    "team": "Trident",
    "time": "2:16.348",
  },
  {
    "code": "MIN",
    "gap": "32.845",
    "int": "4.325",
    "kph": "138.499",
    "lap_set_on": 2024-02-29T11:25:42.000Z,
    "laps": "3",
    "name": "G. Minì",
    "number": 2,
    "position": "28",
    "team": "PREMA Racing",
    "time": "2:20.673",
  },
  {
    "code": "FLO",
    "gap": "36.985",
    "int": "4.140",
    "kph": "134.540",
    "lap_set_on": 2024-02-29T11:28:27.000Z,
    "laps": "8",
    "name": "S. Floersch",
    "number": 21,
    "position": "29",
    "team": "Van Amersfoort Racing",
    "time": "2:24.813",
  },
  {
    "code": "GOE",
    "gap": "48.112",
    "int": "11.127",
    "kph": "124.940",
    "lap_set_on": 2024-02-29T11:26:38.000Z,
    "laps": "7",
    "name": "O. Goethe",
    "number": 10,
    "position": "30",
    "team": "Campos Racing",
    "time": "2:35.940",
  },
]
`;

exports[`Testing getPracticeResults function Should return practice results with requsted number id 1`] = `
[
  {
    "code": "VMA",
    "gap": "-",
    "int": "-",
    "kph": "210.335",
    "lap_set_on": 2025-04-18T13:26:04.000Z,
    "laps": "19",
    "name": "V. Martins",
    "number": 14,
    "position": "1",
    "team": "ART Grand Prix",
    "time": "1:45.671",
  },
  {
    "code": "STA",
    "gap": "0.146",
    "int": "0.146",
    "kph": "210.045",
    "lap_set_on": 2025-04-18T13:28:37.000Z,
    "laps": "19",
    "name": "R. Stanek",
    "number": 2,
    "position": "2",
    "team": "Invicta Racing",
    "time": "1:45.817",
  },
  {
    "code": "BEG",
    "gap": "0.319",
    "int": "0.173",
    "kph": "209.702",
    "lap_set_on": 2025-04-18T13:31:24.000Z,
    "laps": "19",
    "name": "D. Beganovic",
    "number": 8,
    "position": "3",
    "team": "Hitech TGR",
    "time": "1:45.990",
  },
  {
    "code": "DUR",
    "gap": "0.391",
    "int": "0.072",
    "kph": "209.560",
    "lap_set_on": 2025-04-18T13:30:26.000Z,
    "laps": "19",
    "name": "J. Dürksen",
    "number": 20,
    "position": "4",
    "team": "AIX Racing",
    "time": "1:46.062",
  },
  {
    "code": "MIN",
    "gap": "0.404",
    "int": "0.013",
    "kph": "209.534",
    "lap_set_on": 2025-04-18T13:26:09.000Z,
    "laps": "19",
    "name": "G. Minì",
    "number": 10,
    "position": "5",
    "team": "PREMA Racing",
    "time": "1:46.075",
  },
  {
    "code": "FOR",
    "gap": "0.574",
    "int": "0.170",
    "kph": "209.199",
    "lap_set_on": 2025-04-18T13:23:46.000Z,
    "laps": "20",
    "name": "L. Fornaroli",
    "number": 1,
    "position": "6",
    "team": "Invicta Racing",
    "time": "1:46.245",
  },
  {
    "code": "CRA",
    "gap": "0.577",
    "int": "0.003",
    "kph": "209.193",
    "lap_set_on": 2025-04-18T13:19:29.000Z,
    "laps": "18",
    "name": "J. Crawford",
    "number": 11,
    "position": "7",
    "team": "DAMS Lucas Oil",
    "time": "1:46.248",
  },
  {
    "code": "JMA",
    "gap": "0.708",
    "int": "0.131",
    "kph": "208.935",
    "lap_set_on": 2025-04-18T13:23:48.000Z,
    "laps": "19",
    "name": "J. Martí",
    "number": 3,
    "position": "8",
    "team": "Campos Racing",
    "time": "1:46.379",
  },
  {
    "code": "MAI",
    "gap": "0.766",
    "int": "0.058",
    "kph": "208.822",
    "lap_set_on": 2025-04-18T13:00:15.000Z,
    "laps": "8",
    "name": "K. Maini",
    "number": 12,
    "position": "9",
    "team": "DAMS Lucas Oil",
    "time": "1:46.437",
  },
  {
    "code": "VER",
    "gap": "0.779",
    "int": "0.013",
    "kph": "208.796",
    "lap_set_on": 2025-04-18T13:30:16.000Z,
    "laps": "19",
    "name": "R. Verschoor",
    "number": 6,
    "position": "10",
    "team": "MP Motorsport",
    "time": "1:46.450",
  },
  {
    "code": "LIN",
    "gap": "0.809",
    "int": "0.030",
    "kph": "208.737",
    "lap_set_on": 2025-04-18T13:23:52.000Z,
    "laps": "19",
    "name": "A. Lindblad",
    "number": 4,
    "position": "11",
    "team": "Campos Racing",
    "time": "1:46.480",
  },
  {
    "code": "GOE",
    "gap": "0.822",
    "int": "0.013",
    "kph": "208.712",
    "lap_set_on": 2025-04-18T13:10:28.000Z,
    "laps": "20",
    "name": "O. Goethe",
    "number": 5,
    "position": "12",
    "team": "MP Motorsport",
    "time": "1:46.493",
  },
  {
    "code": "VIL",
    "gap": "0.890",
    "int": "0.068",
    "kph": "208.579",
    "lap_set_on": 2025-04-18T13:31:08.000Z,
    "laps": "21",
    "name": "R. Villagómez",
    "number": 25,
    "position": "13",
    "team": "Van Amersfoort Racing",
    "time": "1:46.561",
  },
  {
    "code": "DUN",
    "gap": "0.897",
    "int": "0.007",
    "kph": "208.565",
    "lap_set_on": 2025-04-18T13:29:32.000Z,
    "laps": "17",
    "name": "A. Dunne",
    "number": 17,
    "position": "14",
    "team": "Rodin Motorsport",
    "time": "1:46.568",
  },
  {
    "code": "ACO",
    "gap": "0.984",
    "int": "0.087",
    "kph": "208.395",
    "lap_set_on": 2025-04-18T13:09:08.000Z,
    "laps": "15",
    "name": "A. Cordeel",
    "number": 16,
    "position": "15",
    "team": "Rodin Motorsport",
    "time": "1:46.655",
  },
  {
    "code": "EST",
    "gap": "0.991",
    "int": "0.007",
    "kph": "208.381",
    "lap_set_on": 2025-04-18T13:31:12.000Z,
    "laps": "20",
    "name": "M. Esterson",
    "number": 23,
    "position": "16",
    "team": "TRIDENT",
    "time": "1:46.662",
  },
  {
    "code": "BRO",
    "gap": "1.096",
    "int": "0.105",
    "kph": "208.176",
    "lap_set_on": 2025-04-18T13:23:27.000Z,
    "laps": "19",
    "name": "L. Browning",
    "number": 7,
    "position": "17",
    "team": "Hitech TGR",
    "time": "1:46.767",
  },
  {
    "code": "BEN",
    "gap": "1.123",
    "int": "0.027",
    "kph": "208.124",
    "lap_set_on": 2025-04-18T13:30:37.000Z,
    "laps": "20",
    "name": "J. Bennett",
    "number": 24,
    "position": "18",
    "team": "Van Amersfoort Racing",
    "time": "1:46.794",
  },
  {
    "code": "MEG",
    "gap": "1.132",
    "int": "0.009",
    "kph": "208.106",
    "lap_set_on": 2025-04-18T13:30:56.000Z,
    "laps": "19",
    "name": "S. Meguetounif",
    "number": 22,
    "position": "19",
    "team": "TRIDENT",
    "time": "1:46.803",
  },
  {
    "code": "MIY",
    "gap": "1.254",
    "int": "0.122",
    "kph": "207.869",
    "lap_set_on": 2025-04-18T13:31:03.000Z,
    "laps": "20",
    "name": "R. Miyata",
    "number": 15,
    "position": "20",
    "team": "ART Grand Prix",
    "time": "1:46.925",
  },
  {
    "code": "SHI",
    "gap": "2.600",
    "int": "1.346",
    "kph": "205.284",
    "lap_set_on": 2025-04-18T13:15:41.000Z,
    "laps": "20",
    "name": "C. Shields",
    "number": 21,
    "position": "21",
    "team": "AIX Racing",
    "time": "1:48.271",
  },
]
`;

exports[`Testing getPracticeResults function Should return practice results with requsted string name of race 1`] = `
[
  {
    "code": "HAD",
    "gap": "-",
    "int": "-",
    "kph": "185.379",
    "lap_set_on": 2024-02-29T12:43:32.000Z,
    "laps": "18",
    "name": "I. Hadjar",
    "number": 20,
    "position": "1",
    "team": "Campos Racing",
    "time": "1:45.099",
  },
  {
    "code": "COL",
    "gap": "0.137",
    "int": "0.137",
    "kph": "185.138",
    "lap_set_on": 2024-02-29T12:48:06.000Z,
    "laps": "16",
    "name": "F. Colapinto",
    "number": 12,
    "position": "2",
    "team": "MP Motorsport",
    "time": "1:45.236",
  },
  {
    "code": "MAL",
    "gap": "0.489",
    "int": "0.352",
    "kph": "184.520",
    "lap_set_on": 2024-02-29T12:27:02.000Z,
    "laps": "13",
    "name": "Z. Maloney",
    "number": 5,
    "position": "3",
    "team": "Rodin Motorsport",
    "time": "1:45.588",
  },
  {
    "code": "MIY",
    "gap": "0.581",
    "int": "0.092",
    "kph": "184.360",
    "lap_set_on": 2024-02-29T12:35:27.000Z,
    "laps": "13",
    "name": "R. Miyata",
    "number": 6,
    "position": "4",
    "team": "Rodin Motorsport",
    "time": "1:45.680",
  },
  {
    "code": "HAU",
    "gap": "0.709",
    "int": "0.128",
    "kph": "184.137",
    "lap_set_on": 2024-02-29T12:32:18.000Z,
    "laps": "15",
    "name": "D. Hauger",
    "number": 11,
    "position": "5",
    "team": "MP Motorsport",
    "time": "1:45.808",
  },
  {
    "code": "CRA",
    "gap": "0.725",
    "int": "0.016",
    "kph": "184.109",
    "lap_set_on": 2024-02-29T12:32:42.000Z,
    "laps": "14",
    "name": "J. Crawford",
    "number": 7,
    "position": "6",
    "team": "DAMS Lucas Oil",
    "time": "1:45.824",
  },
  {
    "code": "JMA",
    "gap": "0.750",
    "int": "0.025",
    "kph": "184.065",
    "lap_set_on": 2024-02-29T12:22:55.000Z,
    "laps": "15",
    "name": "J. Martí",
    "number": 21,
    "position": "7",
    "team": "Campos Racing",
    "time": "1:45.849",
  },
  {
    "code": "OSU",
    "gap": "0.843",
    "int": "0.093",
    "kph": "183.904",
    "lap_set_on": 2024-02-29T12:29:27.000Z,
    "laps": "13",
    "name": "Z. O'Sullivan",
    "number": 2,
    "position": "8",
    "team": "ART Grand Prix",
    "time": "1:45.942",
  },
  {
    "code": "FIT",
    "gap": "0.846",
    "int": "0.003",
    "kph": "183.899",
    "lap_set_on": 2024-02-29T12:33:04.000Z,
    "laps": "14",
    "name": "E. Fittipaldi",
    "number": 14,
    "position": "9",
    "team": "Van Amersfoort Racing",
    "time": "1:45.945",
  },
  {
    "code": "BOR",
    "gap": "0.869",
    "int": "0.023",
    "kph": "183.859",
    "lap_set_on": 2024-02-29T12:49:01.000Z,
    "laps": "14",
    "name": "G. Bortoleto",
    "number": 10,
    "position": "10",
    "team": "Invicta Racing",
    "time": "1:45.968",
  },
  {
    "code": "VMA",
    "gap": "0.875",
    "int": "0.006",
    "kph": "183.848",
    "lap_set_on": 2024-02-29T12:31:13.000Z,
    "laps": "14",
    "name": "V. Martins",
    "number": 1,
    "position": "11",
    "team": "ART Grand Prix",
    "time": "1:45.974",
  },
  {
    "code": "MAI",
    "gap": "1.007",
    "int": "0.132",
    "kph": "183.620",
    "lap_set_on": 2024-02-29T12:33:50.000Z,
    "laps": "12",
    "name": "K. Maini",
    "number": 9,
    "position": "12",
    "team": "Invicta Racing",
    "time": "1:46.106",
  },
  {
    "code": "JCO",
    "gap": "1.143",
    "int": "0.136",
    "kph": "183.385",
    "lap_set_on": 2024-02-29T12:36:45.000Z,
    "laps": "14",
    "name": "J. Correa",
    "number": 8,
    "position": "13",
    "team": "DAMS Lucas Oil",
    "time": "1:46.242",
  },
  {
    "code": "ARO",
    "gap": "1.198",
    "int": "0.055",
    "kph": "183.290",
    "lap_set_on": 2024-02-29T12:29:22.000Z,
    "laps": "14",
    "name": "P. Aron",
    "number": 17,
    "position": "14",
    "team": "Hitech Pulse-Eight",
    "time": "1:46.297",
  },
  {
    "code": "ANT",
    "gap": "1.506",
    "int": "0.308",
    "kph": "182.760",
    "lap_set_on": 2024-02-29T12:40:33.000Z,
    "laps": "13",
    "name": "A. Antonelli",
    "number": 4,
    "position": "15",
    "team": "PREMA Racing",
    "time": "1:46.605",
  },
  {
    "code": "VER",
    "gap": "1.554",
    "int": "0.048",
    "kph": "182.678",
    "lap_set_on": 2024-02-29T12:39:55.000Z,
    "laps": "14",
    "name": "R. Verschoor",
    "number": 22,
    "position": "16",
    "team": "Trident",
    "time": "1:46.653",
  },
  {
    "code": "DUR",
    "gap": "1.594",
    "int": "0.040",
    "kph": "182.609",
    "lap_set_on": 2024-02-29T12:24:15.000Z,
    "laps": "11",
    "name": "J. Dürksen",
    "number": 24,
    "position": "17",
    "team": "AIX Racing",
    "time": "1:46.693",
  },
  {
    "code": "BAR",
    "gap": "1.748",
    "int": "0.154",
    "kph": "182.346",
    "lap_set_on": 2024-02-29T12:32:59.000Z,
    "laps": "11",
    "name": "T. Barnard",
    "number": 25,
    "position": "18",
    "team": "AIX Racing",
    "time": "1:46.847",
  },
  {
    "code": "BEA",
    "gap": "1.778",
    "int": "0.030",
    "kph": "182.295",
    "lap_set_on": 2024-02-29T12:23:58.000Z,
    "laps": "11",
    "name": "O. Bearman",
    "number": 3,
    "position": "19",
    "team": "PREMA Racing",
    "time": "1:46.877",
  },
  {
    "code": "ACO",
    "gap": "1.887",
    "int": "0.109",
    "kph": "182.109",
    "lap_set_on": 2024-02-29T12:27:54.000Z,
    "laps": "12",
    "name": "A. Cordeel",
    "number": 16,
    "position": "20",
    "team": "Hitech Pulse-Eight",
    "time": "1:46.986",
  },
  {
    "code": "STA",
    "gap": "1.918",
    "int": "0.031",
    "kph": "182.057",
    "lap_set_on": 2024-02-29T12:40:16.000Z,
    "laps": "14",
    "name": "R. Stanek",
    "number": 23,
    "position": "21",
    "team": "Trident",
    "time": "1:47.017",
  },
  {
    "code": "VIL",
    "gap": "2.132",
    "int": "0.214",
    "kph": "181.693",
    "lap_set_on": 2024-02-29T12:24:08.000Z,
    "laps": "14",
    "name": "R. Villagómez",
    "number": 15,
    "position": "22",
    "team": "Van Amersfoort Racing",
    "time": "1:47.231",
  },
]
`;
